--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
   
   <!-- hero section -->
-    <section class="sm:flex flex-row-reverse shadow-md p-2 border-red-800">
+    <section class="sm:flex justify-between flex-row-reverse shadow-md p-2 border-red-800">
         
         <div><!--hero image div -->
             <img class="sm:w-full" src="images/hero-img.jpg" alt="illustration image for the hero section">
